--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1 {
     margin: auto;
 }
 
-button {
+button, a {
     padding: 10px;
     background-color: aliceblue;
     border-radius: 16px;
