--- a/style.css
+++ b/style.css
@@ -19,3 +19,9 @@ button, a {
     background-color: aliceblue;
     border-radius: 16px;
 }
+
+p {
+    font-weight: bolder;
+    font-size: 24px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
